--- a/CustomerCare/CustomerCare.Android/Properties/AndroidManifest.xml
+++ b/CustomerCare/CustomerCare.Android/Properties/AndroidManifest.xml
@@ -1,8 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.CustomerCare" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="26" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="CustomerCare.Android">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.CustomerCare">
+	<uses-sdk android:minSdkVersion="15" />
+	<application android:label="Customer Care">
     <activity android:name="microsoft.identity.client.BrowserTabActivity">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
