--- a/CustomerCare/CustomerCare.Android/Properties/AndroidManifest.xml
+++ b/CustomerCare/CustomerCare.Android/Properties/AndroidManifest.xml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.CustomerCare">
-	<uses-sdk android:minSdkVersion="15" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.CustomerCare" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="27" />
 	<application android:label="Customer Care">
-    <activity android:name="microsoft.identity.client.BrowserTabActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="msal105c8c48-4977-4c63-974e-82424cb3539c" android:host="auth" />
-      </intent-filter>
-    </activity>
-  </application>
+		<activity android:name="microsoft.identity.client.BrowserTabActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="msal105c8c48-4977-4c63-974e-82424cb3539c" android:host="auth" />
+			</intent-filter>
+		</activity>
+	</application>
 </manifest>
