--- a/CustomerCare/CustomerCare.iOS/CustomerCare.iOS.csproj
+++ b/CustomerCare/CustomerCare.iOS/CustomerCare.iOS.csproj
@@ -119,6 +119,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Graph">
+      <Version>1.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Identity.Client">
       <Version>1.1.2-preview0008</Version>
     </PackageReference>
