--- a/CustomerCare/CustomerCare.Android/Properties/AndroidManifest.xml
+++ b/CustomerCare/CustomerCare.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.CustomerCare" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="br.com.montreal.CustomerSuccess" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="27" />
-	<application android:label="Customer Care">
+	<application android:label="Customer Success">
 		<activity android:name="microsoft.identity.client.BrowserTabActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
